Ensure the auto columns layout based on the content, which aligns to the grid.

--- a/src/scss/blocks/figure-wrapper/figure-wrapper.scss
+++ b/src/scss/blocks/figure-wrapper/figure-wrapper.scss
@@ -17,5 +17,6 @@
   grid-column: container-grid;
   display: grid;
   grid-auto-flow: column;
+  grid-template-columns: min-content;
   grid-column-gap: var(--grid-gap);
 }
